compiler/tests-spec/testData/psi/linked/constant-literals/boolean-literals/p-1/neg/2.8.kt
/*
 KOTLIN PSI SPEC TEST (NEGATIVE)

 SECTIONS: constant-literals, boolean-literals
 PARAGRAPH: 1
 SENTENCE: [2] These are strong keywords which cannot be used as identifiers unless escaped.
 NUMBER: 8
 DESCRIPTION: The use of Boolean literals as the identifier (without backtick) in the stringTemplateElement.
 NOTE: this test data is generated by FeatureInteractionTestDataGenerator. DO NOT MODIFY CODE MANUALLY!
 */

fun f1() {
    val x1 = "$true"

    val x2 = "..." + "...$false..." + "..."

    var x3 = "$true$false$true"
}
